# slackmgmt

./: .gitignore  Dockerfile  build.sh  config.toml.example  pyproject.toml  setup.cfg
.github/workflows/: actions.yaml  pythonapp.yml
src/slack/: __init__.pyi
src/slack/rtm/: client.pyi
src/slack/web/: base_client.pyi  client.pyi  slack_response.pyi
src/slackmgmt/: __init__.py  __main__.py  bot.py  cli.py  config.py  server.py
src/slackmgmt/config/: parser.py
src/slackmgmt/plugins/: bans.py
