[tool.poetry]
name = "slackmgmt"
version = "0.1.0"
description = "Manage slack instance"
authors = ["Daniel Wallace <danielwallace@gtmanfred.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
toml = "^0.10.0"
slackclient = "^2.5.0"

[tool.poetry.dev-dependencies]
tox = "^3.14"
pytest = "^5.3"
flake8 = "^3.7.9"
mypy = "^0.761"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
